select2 overflow fix

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -982,6 +982,10 @@ label {
   transform: rotate(180deg);
 }
 
+.select-input-wrapper .select2-container--open .select2-dropdown {
+  overflow: hidden;
+}
+
 .select-input-wrapper .select2-container--open .select2-dropdown--below {
   border-top: 1px dashed #DEE7F3;
   border-top-left-radius: 0;
