--- a/www/sass/components/_select.scss
+++ b/www/sass/components/_select.scss
@@ -102,6 +102,7 @@
       }
 
       .select2-dropdown {
+        overflow: hidden;
 
         &--below {
           border-top: 1px dashed $middle-grey;
